src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_WritingReadOnlyComplexProperty.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">	
		<ListBox>
		    <ListBox.ActualWidth>500.0</ListBox.ActualWidth>
        </ListBox>
</DockPanel>
</Page>
